# yew-portfolio

./: .gitignore  Cargo.toml  Dockerfile  README.md  deploy.template.yml  index.html  package.json  webpack.config.js  yew-portfolio.yaml
src/: app.rs  lib.rs
src/pages/: about.rs  contact.rs  home.rs  mod.rs  page_not_found.rs  post.rs  post_list.rs  skills.rs  work.rs
static/: index.html  robots.txt  sitemap.xml  style.scss
