[package]
name = "yew-wasm-pack-template"
version = "0.2.0"
authors = ["Christopher Daniel <chris.daniel@hey.com>"]
edition = "2018"
description = "Christopher Daniel Portfolio"
repository = "https://github.com/dani97/yew-portfolio"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
wee_alloc = "0.4.5"
yew = "0.17"
ybc = "0.1"
yew-router = "0.14"
yewtil = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  "Document",
  "DomStringMap",
  "Element",
  "Location",
  "HtmlElement",
  "Storage",
  "Window"
]
